--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Kulki The Game</h1>
-    <canvas id="game"></canvas>
+    <canvas id="game" width="800" height="600"
+            style="border: 2px solid black;"></canvas>
 </body>
 </html>
