--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <canvas id="game" width="700" height="700"
-            style="border: 5px solid black;"></canvas>
+    <canvas id="game"
+            style="border: 5px solid black;" height="1000" width="1600"></canvas>
 </body>
 </html>
