Modified: canvas dimentions inside js

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <canvas id="game"
-            style="border: 5px solid black;" height="1000" width="1600"></canvas>
+    <canvas id="game"></canvas>
 </body>
 </html>
