Add: navigation menu

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,78 @@
 </head>
 <body>
     <canvas id="game"></canvas>
+    <div id="navigation">
+        <div class="submenu">
+            <h3 class="submenu-title">Balls</h3>
+            <div class="submenu-items">
+                <div class="grid-item">
+                    <h4>1</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>2</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>3</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>4</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>5</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>6</h4>
+                </div>
+            </div>
+        </div>
+        
+        <div class="submenu">
+            <h3 class="submenu-title">Ulepszenia</h3>
+            <div class="submenu-items">
+                <div class="grid-item">
+                    <h4>1</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>2</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>3</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>4</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>5</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>6</h4>
+                </div>
+            </div>
+        </div>
+        
+        <div class="submenu">
+            <h3 class="submenu-title">Inne</h3>
+            <div class="submenu-items">
+                <div class="grid-item">
+                    <h4>1</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>2</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>3</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>4</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>5</h4>
+                </div>
+                <div class="grid-item">
+                    <h4>6</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
