--- a/public/index.html
+++ b/public/index.html
@@ -11,31 +11,40 @@
     <canvas id="game"></canvas>
     <div id="navigation">
         <div class="submenu">
+            <h2 class="submenu-title" id="levelLabel">Level</h2>
+            <h2 class="submenu-title">Money</h2>
+            <h2 class="submenu-title" id="moneyLabel"></h2>
             <h3 class="submenu-title">Balls</h3>
             <div class="submenu-items">
-                <div class="grid-item">
+                <div key="b1" class="grid-item">
                     <h4>1</h4>
+                    <h5 id="b1Count" class="current-balls-count">-</h5>
                 </div>
-                <div class="grid-item">
+                <div key="b2" class="grid-item">
                     <h4>2</h4>
+                    <h5 id="b2Count" class="current-balls-count">-</h5>
                 </div>
-                <div class="grid-item">
+                <div key="b3" class="grid-item">
                     <h4>3</h4>
+                    <h5 id="b3Count" class="current-balls-count">-</h5>
                 </div>
-                <div class="grid-item">
+                <div key="b4" class="grid-item">
                     <h4>4</h4>
+                    <h5 id="b4Count" class="current-balls-count">-</h5>
                 </div>
-                <div class="grid-item">
+                <div key="b5" class="grid-item">
                     <h4>5</h4>
+                    <h5 id="b5Count" class="current-balls-count">-</h5>
                 </div>
-                <div class="grid-item">
+                <div key="b6" class="grid-item">
                     <h4>6</h4>
+                    <h5 id="b6Count" class="current-balls-count">-</h5>
                 </div>
             </div>
         </div>
         
         <div class="submenu">
-            <h3 class="submenu-title">Ulepszenia</h3>
+            <h3 class="submenu-title">Upgrades</h3>
             <div class="submenu-items">
                 <div class="grid-item">
                     <h4>1</h4>
@@ -59,7 +68,7 @@
         </div>
         
         <div class="submenu">
-            <h3 class="submenu-title">Inne</h3>
+            <h3 class="submenu-title">Other</h3>
             <div class="submenu-items">
                 <div class="grid-item">
                     <h4>1</h4>
