--- a/public/index.html
+++ b/public/index.html
@@ -17,28 +17,28 @@
             <h3 class="submenu-title">Balls</h3>
             <div class="submenu-items">
                 <div key="b1" class="grid-item">
-                    <h4>1</h4>
-                    <h5 id="b1Count" class="current-balls-count">-</h5>
+                    <img src="../assets/1.png">
+                    <h5 id="b1Count" class="inner-count">-</h5>
                 </div>
                 <div key="b2" class="grid-item">
-                    <h4>2</h4>
-                    <h5 id="b2Count" class="current-balls-count">-</h5>
+                    <img src="../assets/2.png">
+                    <h5 id="b2Count" class="inner-count">-</h5>
                 </div>
                 <div key="b3" class="grid-item">
-                    <h4>3</h4>
-                    <h5 id="b3Count" class="current-balls-count">-</h5>
+                    <img src="../assets/3.png">
+                    <h5 id="b3Count" class="inner-count">-</h5>
                 </div>
                 <div key="b4" class="grid-item">
-                    <h4>4</h4>
-                    <h5 id="b4Count" class="current-balls-count">-</h5>
+                    <img src="../assets/4.png">
+                    <h5 id="b4Count" class="inner-count">-</h5>
                 </div>
                 <div key="b5" class="grid-item">
-                    <h4>5</h4>
-                    <h5 id="b5Count" class="current-balls-count">-</h5>
+                    <h4>&nbsp;</h4>
+                    <h5 id="b5Count" class="inner-count">-</h5>
                 </div>
                 <div key="b6" class="grid-item">
-                    <h4>6</h4>
-                    <h5 id="b6Count" class="current-balls-count">-</h5>
+                    <h4>&nbsp;</h4>
+                    <h5 id="b6Count" class="inner-count">-</h5>
                 </div>
             </div>
         </div>
@@ -46,23 +46,29 @@
         <div class="submenu">
             <h3 class="submenu-title">Upgrades</h3>
             <div class="submenu-items">
-                <div class="grid-item">
-                    <h4>1</h4>
+                <div key="clickUpgrade" class="grid-item">
+                    <img src="../assets/finger-u.png">
+                    <h5 id="fingerUpgradeCount" class="inner-count">10</h5>
                 </div>
-                <div class="grid-item">
-                    <h4>2</h4>
+                <div key="moneyUpgrade" class="grid-item">
+                    <img src="../assets/coin-u.png">
+                    <h5 id="moneyUpgradeCount" class="inner-count">x4</h5>
                 </div>
                 <div class="grid-item">
                     <h4>3</h4>
+                    <h5 id="#" class="inner-count">-</h5>
                 </div>
                 <div class="grid-item">
                     <h4>4</h4>
+                    <h5 id="#" class="inner-count">-</h5>
                 </div>
                 <div class="grid-item">
                     <h4>5</h4>
+                    <h5 id="#" class="inner-count">-</h5>
                 </div>
                 <div class="grid-item">
                     <h4>6</h4>
+                    <h5 id="#" class="inner-count">-</h5>
                 </div>
             </div>
         </div>
